fixed theme switch button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,9 @@ header {
 #themeSwitch {
   background: none;
   border: none;
-  margin-left: 64.5%;
   color: #9e9e9e;
+  text-align: right;
+  width: 70%;
 }
 #themeSwitch:focus {
   outline: none;
@@ -281,6 +282,9 @@ h4 {
     text-align: center;
     margin-right: 0;
   }
+  #themeSwitch {
+    text-align: center;
+  }
   #projects h3 {
     font-size: 1.5em;
     padding-bottom: 0;
@@ -316,12 +320,6 @@ h4 {
   h2 {
     font-size: 1.5em !important;
   }
-  /*
-  .socials-grid {
-    display: block !important;
-    font-size: 1em;
-  }
-  */
   h3 {
     font-size: 1.35em;
   }
